--- a/scss/reset/variables.scss
+++ b/scss/reset/variables.scss
@@ -1,6 +1,18 @@
 :root {
     --circulo: 50%;
     --marginm: 50px;
+    --marginxs: 15px;
     --bgsize: 500%;
     --colortexto: white;
+    --bg1lima: #C6EA8D;
+    --bg1rosa: #FE90AF;
+    --bg2fucsia: #d74d89;
+    --bg2salmon: #eb8777;
+    --bg2naranja: #f1a355;
+    --bg3granate: #541447;
+    --bg3rosaclaro: #dd89ad;
+    --bg3morado: #61529f;
+    --bg4azul:  #36569c;
+    --bg4azulclaro: #5d8dca;
+    --bg4violeta; #825a9b;
 }
