--- a/scss/reset/reset.scss
+++ b/scss/reset/reset.scss
@@ -29,9 +29,9 @@ table , tr , td {
   border-collapse: collapse;
   border-spacing: 0;
 }
-html {
-  scroll-behavior: smooth;
-}
+// html {
+//   scroll-behavior: smooth;
+// }
 h1 , h2 , h3 , h4 , h5 , h6 , strong , a {
   display: block;
   text-decoration: none;
@@ -52,7 +52,7 @@ form , input, textarea, select , button , label{
   }
 
 body {
-  font-family: var(--tipo-principal);
+  font-family: 'Montserrat', sans-serif;
   font-size: 100%;
   min-height: 100vh;
   background-color: var(--blanco);
